fixed grouping issues on my resume

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -124,7 +124,7 @@
               Responsible for detecting cars and environmental obstacles which is used to plan the car's raceline.
             </li> -->
             <li>
-              Responsible for real-time detection of opponent race cars and obstacles at speeds up to 190 miles per hour.
+              Responsible for real-time detection of opponent race cars and obstacles at speeds up to 180 miles per hour.
             </li>
             <!-- <li>
               Developed a monocular depth estimation pipeline using Torch, ATen
@@ -132,7 +132,7 @@
               Integrated cameras into the perception stack with a PyTorch machine-learning model.
             </li> -->
             <li>
-              Mitigated rear-radar blind spots by fusing cameras into the detection pipeline.
+              Mitigated rear-LiDAR blind spots by fusing 4D radars into the detection pipeline.
             </li>
             <!-- <li>
               Used cameras to reduce radar blindspots 
@@ -140,10 +140,10 @@
             <!-- <li>
               Implemented an Extended Kalman Filter (EKF) to fuse opponent camera, lidar and radar position and velocity estimations.
             </li> -->
-            <li>
+            <!-- <li>
               Decreased detection time over 50% by implementing
               networking optimizations and zero-copy data-transfer.
-            </li>
+            </li> -->
             <li>
             Created a custom profiling tool to record a ROS node's memory, CPU, and GPU usage.
             </li>
@@ -205,7 +205,7 @@
                 <strong>School of Engineering and Applied Science,</strong> University
                 of Virginia
               </h3>
-              <p class="italic">Graphical Processing Unit (GPU) Researcher</p>
+              <p class="italic">Graphical Processing Unit Researcher</p>
             </div>
             <div>
               <p class="italic">December 2023 &mdash; Present</p>
@@ -452,6 +452,7 @@
           </ul>
         </div>
     </section> -->
+      </section>
 
         <section id="skills">
           <div>
@@ -489,7 +490,6 @@
             <li>National Merit Finalist</li>
           </ul>
         </section>
-      </section>
     </main>
   </body>
 </html>
