--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,4 +1,5 @@
 <html lang="en">
+  <head>
   <style>
     body {
       /* disables ligatures */
@@ -22,7 +23,7 @@
       .print-mimic {
         width: auto;
         margin: 0;
-        padding: 5mm 10mm 5mm 10mm;
+        padding: 6mm 12mm 5mm 12mm;
         border: none;
         box-shadow: none;
       }
@@ -45,7 +46,12 @@
     content="William Kaiser is a student at the University of Virginia studying Computer Science in the School of Engineering interested in software development."
   />
 
-  <body class="print-mimic leading-snug font-inter">
+ 
+</head>
+
+  <body class="print-mimic leading-snug font-inter"> <address hidden>
+    23 Villa Canyon Place, The Woodlands, TX 77382
+  </address>
     <header class="grid grid-cols-3">
       <div class="col-span-1 col-start-2 flex flex-col text-center">
         <h1 class="text-xl font-bold">William David Kaiser</h1>
@@ -228,6 +234,37 @@
           </ul>
         </div>
 
+        <div id="timelapse">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1"><strong>TimeLapze</strong>, Personal Project</h3>
+              <p class="italic">Screen and Camera Recorder</p>
+            </div>
+            <div>
+              <p class="italic">May 2023 &mdash; January 2024</p>
+            </div>
+          </div>
+
+          <ul class="list-disc list-inside px-4 mr-8">
+            <li>
+              Built and published an open-source screen and camera recorder to
+              make time-lapse videos on MacOS.
+            </li>
+            <!-- <li>
+              Prototyped this project to reduce screen recording sizes using
+              Python and OpenCV.
+            </li> -->
+            <li>
+              Reduced build size from 500 MB to 2 MB after rewriting a Python
+              proof of concept in native Swift.
+            </li>
+            <li>
+              Ranked #1 on Hacker News and gained >750 Stars on GitHub after
+              launch.
+            </li>
+          </ul>
+        </div>
+
         <div id="exp-ds-research">
           <div class="flex flex-row justify-between items-end">
             <div>
@@ -353,42 +390,12 @@
         </ul> -->
       </div>
 
-      <section id="projects">
+      <!-- <section id="projects">
         <h2 class="text-xl font-medium -mb-1">Projects</h2>
         <hr class="mb-1 border-black border-t-[1px]" />
 
-        <div id="timelapse">
-          <div class="flex flex-row justify-between items-end">
-            <div>
-              <h3 class="-mb-1"><strong>TimeLapze</strong></h3>
-              <p class="italic">Screen and Camera Recorder</p>
-            </div>
-            <div>
-              <p class="italic">May 2023 &mdash; January 2024</p>
-            </div>
-          </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
-            <li>
-              Built and published an open-source screen and camera recorder to
-              make time-lapse videos on MacOS.
-            </li>
-            <!-- <li>
-              Prototyped this project to reduce screen recording sizes using
-              Python and OpenCV.
-            </li> -->
-            <li>
-              Reduced build size from 500 MB to 2 MB after rewriting a Python
-              proof of concept in native Swift.
-            </li>
-            <li>
-              Ranked #1 on Hacker News and gained >750 Stars on GitHub after
-              launch.
-            </li>
-          </ul>
-        </div>
-
-        <!-- <div id="isef-analysis">
+        <div id="isef-analysis">
         <div class="flex flex-row justify-between items-end">
           <div>
             <h3 class="-mb-1">
@@ -451,8 +458,8 @@
             <li>Wrote, presented, and defended research conducted.</li>
           </ul>
         </div>
-    </section> -->
-      </section>
+    </section>
+      </section> -->
 
         <section id="skills">
           <div>
