updating experience with sitscape

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -183,6 +183,12 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
 
         <ul class="space-y-4">
           <ResumeItem
+            title="SitScape"
+            description="Software Engineering Intern"
+            href="https://sitscape.com/"
+            src="/logos/sitscape_logo.png"
+          />
+          <ResumeItem
             title="University of Virginia, School of Engineering and Applied Science"
             description="GPU Research Assistant"
             href="https://engineering.virginia.edu/"
