--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -118,7 +118,7 @@
               <h3 class="-mb-1">
                 <strong>Cavalier Autonomous Racing,</strong> University of Virginia
               </h3>
-              <p class="italic">Perception Subteam</p>
+              <p class="italic">Software Engineer</p>
             </div>
             <div>
               <p class="italic">April 2024 &mdash; Present</p>
@@ -176,6 +176,9 @@
           </li> -->
           <li>
             Built a user-interface and logic generator for application developers for a no-code platform.
+          </li>
+          <li>
+            Worked with JavaScript, HTML, CSS and Python in an agile development environment.
           </li>
           <!-- <li>
             Built a copilot for application developers in web-based no-code platform. 
@@ -259,7 +262,7 @@
               proof of concept in native Swift.
             </li>
             <li>
-              Ranked #1 on Hacker News and gained >750 Stars on GitHub after
+              Ranked <strong>#1 on Hacker News</strong> and gained >750 Stars on GitHub after
               launch.
             </li>
           </ul>
