--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -83,7 +83,7 @@
                 Applied Science
               </h3>
               <p class="italic">
-                B.S. in Engineering Computer Science | Minor in Data Science |
+                B.S. in Computer Science | Minor in Data Science |
                 Minor in Engineering Business
               </p>
             </div>
@@ -93,11 +93,10 @@
             </div>
           </div>
           <ul class="list-inside px-4 pr-20">
-            <li class="hangingIndent">
-              <strong>Relevant Coursework</strong> Data Structures and Algorithms, Computer
-              Systems and Organizations, Linear Algebra, Cryptography, Software Development
-              Essentials, Advanced Software Development
-            </li>
+              <!-- <li class="hangingIndent">
+                <strong>Relevant Coursework</strong> Data Structures and Algorithms, Computer
+                Systems and Organizations, Linear Algebra, Cryptography, Compilers, Cybersecurity, Artificial Intelligence
+              </li> -->
             <li class="hangingIndent">
               <strong>Clubs</strong> Phi Eta Sigma Honor Society, Cavalier Autonomous
               Racing, Forge, theCourseForum, Virginia Entrepreneurship Organization,
@@ -130,15 +129,14 @@
               Responsible for detecting cars and environmental obstacles which is used to plan the car's raceline.
             </li> -->
             <li>
-              Responsible for real-time detection of opponent race cars and obstacles at speeds up to 180 miles per hour.
-            </li>
+              Engineered real-time C++ algorithms for detecting opponent race cars at speeds up to 184.1 mph.</li>
             <!-- <li>
               Developed a monocular depth estimation pipeline using Torch, ATen
               and TensorRT.
               Integrated cameras into the perception stack with a PyTorch machine-learning model.
             </li> -->
             <li>
-              Mitigated rear-LiDAR blind spots by fusing 4D radars into the detection pipeline.
+              Mitigated rear-LiDAR blind spots by fusing 4D radars into the Kalman Filter detection pipeline.
             </li>
             <!-- <li>
               Used cameras to reduce radar blindspots 
@@ -151,7 +149,12 @@
               networking optimizations and zero-copy data-transfer.
             </li> -->
             <li>
-            Created a custom profiling tool to record a ROS node's memory, CPU, and GPU usage.
+              Created a custom profiling tool to record a ROS node&apos;s CPU and GPU usage to reduce detection time.
+            </li>
+            <li>
+              Led a remote development initiative for a 30+ member team, enabling new members to onboard in under 30 minutes using a standardized container.            </li>
+            <li>
+              Created and integrated a parallel GitLab CI/CD pipeline on the University of Virginia&apos;s SLURM cluster, decreasing test execution time by 94%.
             </li>
           </ul>
         </div>
@@ -177,9 +180,7 @@
           <li>
             Built a user-interface and logic generator for application developers for a no-code platform.
           </li>
-          <li>
-            Worked with JavaScript, HTML, CSS and Python in an agile development environment.
-          </li>
+    
           <!-- <li>
             Built a copilot for application developers in web-based no-code platform. 
           </li> -->
@@ -198,6 +199,10 @@
 
           <li>
             Reduced development time by generating a first-pass user interface and logic for application developers.
+          </li>
+
+          <li>
+            Worked with JavaScript, HTML, CSS and Python in an Agile development environment.
           </li>
     
           <!-- <li>
@@ -240,7 +245,7 @@
         <div id="timelapse">
           <div class="flex flex-row justify-between items-end">
             <div>
-              <h3 class="-mb-1"><strong>TimeLapze</strong>, Personal Project</h3>
+              <h3 class="-mb-1"><a href="https://github.com/wkaisertexas"><strong>TimeLapze</strong>, Personal Project</a></h3>
               <p class="italic">Screen and Camera Recorder</p>
             </div>
             <div>
@@ -258,12 +263,12 @@
               Python and OpenCV.
             </li> -->
             <li>
-              Reduced build size from 500 MB to 2 MB after rewriting a Python
-              proof of concept in native Swift.
-            </li>
-            <li>
               Ranked <strong>#1 on Hacker News</strong> and gained >750 Stars on GitHub after
               launch.
+            </li>
+            <li>
+              Reduced build size from 500 MB to 2 MB after rewriting a Python
+              proof of concept in native Swift.
             </li>
           </ul>
         </div>
@@ -306,7 +311,7 @@
               <h3 class="-mb-1">
                 <strong>Valedor Partners,</strong> Houston, TX
               </h3>
-              <p class="italic">Data Science Intern</p>
+              <p class="italic">Software Engineering Intern</p>
             </div>
             <div>
               <p class="italic">May 2021 &mdash; August 2021</p>
@@ -330,7 +335,7 @@
         </div>
       </section>
 
-      <section id="leadership">
+      <section id="leadership" class="space-y-2">
         <div>
           <h2 class="text-xl font-medium -mb-1">Leadership</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
@@ -351,11 +356,14 @@
 
           <ul class="list-disc list-inside px-4 mr-8">
             <li>
+              Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow.
+            </li>
+            <!-- <li>
               Taught an Introduction to Machine Learning with TensorFlow Course to 20 students.
             </li>
             <li class="parents">
             Developed a 10-week curriculum to prepare students for the TensorFlow Developer Certification Test.
-            </li>
+            </li> -->
             <!-- <li>
               Developed a 10-week curriculum from scratch which
               included readings, lectures and take-home projects.
@@ -476,7 +484,7 @@
               SQL
             </li>
             <li>
-              <strong>Libraries</strong> Django, ROS 2, React (Next.js), TensorFlow,
+              <strong>Libraries</strong> Git, Django, ROS 2, React (Next.js), TensorFlow,
               OpenCV, GGPlot2, Bokeh, Matplotlib, Pandas, NumPy
             </li>
             <li>
