--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -152,7 +152,7 @@
               Created a custom profiling tool to record a ROS node&apos;s CPU and GPU usage to reduce detection time.
             </li>
             <li>
-              Led a remote development initiative for a 30+ member team, enabling new members to onboard in under 30 minutes using a standardized container.            </li>
+              Led a remote development initiative enabling new members to onboard in &lt;30 minutes.</li>
             <li>
               Created and integrated a parallel GitLab CI/CD pipeline on the University of Virginia&apos;s SLURM cluster, decreasing test execution time by 94%.
             </li>
@@ -335,11 +335,36 @@
         </div>
       </section>
 
-      <section id="leadership" class="space-y-2">
+      <section id="leadership" class="space-y-1">
         <div>
           <h2 class="text-xl font-medium -mb-1">Leadership</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
         </div>
+
+        <div id="veo">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>Virginia Entrepreneurship Organization, </strong> University
+                of Virginia
+              </h3>
+              <p class="italic">President</p>
+            </div>
+            <div>
+              <p class="italic">November 2023 &mdash; Present</p>
+            </div>
+          </div>
+  
+          <!-- <ul class="list-disc list-inside px-4">
+            <li>
+              Organized a pitch competition with 10 teams and $1,000 in prizes.
+            </li>
+            <li>
+              Coordinated speaker events with local entrepreneurs with over 50
+              attendees.
+            </li>
+          </ul> -->
+        </div>  
 
         <div id="course-director">
           <div class="flex flex-row justify-between items-end">
@@ -347,60 +372,37 @@
               <h3 class="-mb-1">
                 <strong>Forge,</strong> University of Virginia
               </h3>
-              <p class="italic">Course Director</p>
+              <p class="italic">Director</p>
             </div>
             <div>
               <p class="italic">August 2023 &mdash; Present</p>
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
-            <li>
-              Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow.
-            </li>
-            <!-- <li>
-              Taught an Introduction to Machine Learning with TensorFlow Course to 20 students.
-            </li>
-            <li class="parents">
-            Developed a 10-week curriculum to prepare students for the TensorFlow Developer Certification Test.
-            </li> -->
-            <!-- <li>
-              Developed a 10-week curriculum from scratch which
-              included readings, lectures and take-home projects.
-            </li> -->
-            <!-- <li>
-              Culminated in a student-directed final project showcasing an
-              interactive machine learning model.
-            </li> -->
-          </ul>
+          <!-- <ul class="list-disc list-inside px-4 mr-8">
+              <li>
+                Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow.
+              </li>
+              <li>
+                Taught an Introduction to Machine Learning with TensorFlow Course to 20 students.
+              </li>
+              <li class="parents">
+              Developed a 10-week curriculum to prepare students for the TensorFlow Developer Certification Test.
+              </li>
+              <li>
+                Developed a 10-week curriculum from scratch which
+                included readings, lectures and take-home projects.
+              </li>
+              <li>
+                Culminated in a student-directed final project showcasing an
+                interactive machine learning model.
+              </li>
+            </ul> -->
         </div>
+
+      
       </section>
-
-      <div id="veo">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1">
-              <strong>Virginia Entrepreneurship Organization, </strong> University
-              of Virginia
-            </h3>
-            <p class="italic">Vice President of Events</p>
-          </div>
-          <div>
-            <p class="italic">November 2023 &mdash; Present</p>
-          </div>
-        </div>
-
-        <!-- <ul class="list-disc list-inside px-4">
-          <li>
-            Organized a pitch competition with 10 teams and $1,000 in prizes.
-          </li>
-          <li>
-            Coordinated speaker events with local entrepreneurs with over 50
-            attendees.
-          </li>
-        </ul> -->
-      </div>
-
+     
       <!-- <section id="projects">
         <h2 class="text-xl font-medium -mb-1">Projects</h2>
         <hr class="mb-1 border-black border-t-[1px]" />
@@ -484,8 +486,8 @@
               SQL
             </li>
             <li>
-              <strong>Libraries</strong> Git, Django, ROS 2, React (Next.js), TensorFlow,
-              OpenCV, GGPlot2, Bokeh, Matplotlib, Pandas, NumPy
+              <strong>Tools</strong> Linux, Git, Django, ROS 2, React, TensorFlow,
+              OpenCV, Matplotlib, Pandas, NumPy, Jira, Visual Studio
             </li>
             <li>
               <strong>Certifications</strong> TensorFlow Developer Certified, AWS
@@ -501,7 +503,7 @@
           </div>
 
           <ul class="w-full grid grid-cols-2 list-inside list-disc px-4">
-            <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
+            <li>Hoo Hacks 1st Place</li>
             <li>Dean's List</li>
             <li>Eagle Scout</li>
             <!-- <li>The Congressional Award Gold Medal</li> -->
